--- a/app/src/main/res/layout/activity_2.xml
+++ b/app/src/main/res/layout/activity_2.xml
@@ -16,6 +16,8 @@
 
     <TextView
         android:id="@+id/tv_result"
+        android:clickable="true"
+        android:onClick="onClick"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -23,6 +25,8 @@
 
     <TextView
         android:id="@+id/tv_result2"
+        android:clickable="true"
+        android:onClick="onClick"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -30,6 +34,7 @@
 
     <Button
         android:id="@+id/btn_click"
+        android:onClick="onClick"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
